Fix scrollbar not honoring color-mode

--- a/static/styles/_scrollbar.css
+++ b/static/styles/_scrollbar.css
@@ -1,40 +1,38 @@
-* {
+html {
     -ms-overflow-style: none;
     scrollbar-width: thin;
 }
 
-*::-webkit-scrollbar {
+html::-webkit-scrollbar {
     width: 0.75rem;
     height: 0.75rem;
 }
 
-*::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-thumb {
     background-color: #8c8fa1;
     border-radius: 0.95rem;
 }
 
-*::-webkit-scrollbar-thumb:hover {
+html::-webkit-scrollbar-thumb:hover {
     background-color: #6c6f85;
 }
 
-*::-webkit-scrollbar-track {
+html::-webkit-scrollbar-track {
     background-color: #eff1f5;
 }
 
-@media (prefers-color-scheme: dark) {
-    * {
-        scrollbar-color: #7f849c #1e1e2e;
-    }
+html.dark {
+    scrollbar-color: #7f849c #1e1e2e;
+}
 
-    *::-webkit-scrollbar-thumb {
-        background-color: #7f849c;
-    }
+html.dark::-webkit-scrollbar-thumb {
+    background-color: #7f849c;
+}
 
-    *::-webkit-scrollbar-thumb:hover {
-        background-color: #a6adc8;
-    }
+html.dark::-webkit-scrollbar-thumb:hover {
+    background-color: #a6adc8;
+}
 
-    *::-webkit-scrollbar-track {
-        background-color: #1e1e2e;
-    }
+html.dark::-webkit-scrollbar-track {
+    background-color: #1e1e2e;
 }
